--- a/public/css/app.css
+++ b/public/css/app.css
@@ -622,7 +622,7 @@ h1.deleted {
 .cards-container {
   flex:1;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   border-radius: 10px;
 }
