less saturated color

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Mona+Sans:ital,wdth,wght@0,100.1,200..900;1,100.1,200..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root { 
-  --main-color: #212027;
+  --main-color: #2A292F;
   --background: #DEDBC9;
   --text: black;
   --second-color: #f48500;
