--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,8 @@
 }
 
 html {
-  width: 100%;
-  height: 100%;
+  width: 98vw;
+  height: 90vh;
 }
 
 body {
@@ -24,6 +24,39 @@ body {
 main {
   flex: 1;
 }
+
+.rectangle-div {
+  background-color: var(--main-color);
+  padding: 20px;
+  color: white;
+  border-radius: 20px;
+}
+
+
+#my-balance,
+#my-transactions { 
+  margin: 0 20px;
+}
+
+#my-balance h1,
+#my-transactions h1{
+  font-size: 3.5rem;
+  font-weight: 400;
+}
+
+#my-balance h2,
+#my-transactions h2{
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
+#my-balance,
+.faq-div {
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 20px;
+}
+
 
 .footer {
  
@@ -590,10 +623,10 @@ input[type=password]:focus {
   display: flex;
   flex-direction: row;
   gap: 20px;
-  background-color: white;
+
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
   justify-content: space-between;
 }
 
@@ -624,7 +657,8 @@ input[type=password]:focus {
   flex: 1;
   height: 10px;
   margin-top: auto;
-  background-color: white;
+  background-color: var(--main-color);
+  color: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -684,8 +718,9 @@ input[type=password]:focus {
   align-items: center;
   font-size: 2rem;
   font-weight: bold;
-  background-color: white;
-  padding: 20px;
+  background-color: var(--main-color);
+  color: white;
+  padding: 20px 50px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -753,14 +788,18 @@ button[type="submit"] {
 span { cursor: pointer;}
 
 #auction-name-star {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-  span {
-    margin: 0;
-  }
-    form {
-      margin: 0;
-    }
+
+span {
+  margin: 0;
+}
+
+form {
+  margin: 0;
+}
   
 
 .auction-info {
@@ -880,6 +919,8 @@ input[type="range"] {
 #auction-seller-report {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+
     gap: 10px;
     text-align: center;
 }
@@ -916,12 +957,18 @@ input[type="range"] {
 #deposit {
   width: 20%;
   display: flex;
+  gap: 10px;
   flex-direction: row;
   justify-content: space-between;
 }
 
 #deposit input {
     width: 50%;
+}
+
+#deposit #withdraw { 
+  position: relative; 
+  left: 20px;
 }
 
 @keyframes notification-slide-in {
