--- a/public/css/app.css
+++ b/public/css/app.css
@@ -808,3 +808,36 @@ input[type="range"] {
   font-size: 8px;
   z-index: 1;
 }
+
+#notifications-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.notification-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.notification-item.hidden {
+  display: none;
+}
+
+.notification-content {
+  flex-grow: 1;
+}
+
+.notification-actions {
+  display: flex;
+  gap: 10px;
+}
+
+.mark-as-read-form {
+  margin-left: 10px;
+}
