--- a/public/css/app.css
+++ b/public/css/app.css
@@ -768,15 +768,27 @@ input[type="range"] {
   align-items: center;
   justify-content: space-between;
   animation: notification-slide-in 0.5s ease-in-out;
+  overflow: hidden;
+  word-wrap: break-word;
 }
 
 .notification.slide-out {
   animation: notification-slide-out 0.5s ease-in-out forwards;
 }
 
+.notification-link {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .notification .message {
   font-size: 14px;
   color: #333;
+  flex-grow: 1;
 }
 
 .notification .close-btn {
@@ -784,17 +796,16 @@ input[type="range"] {
   color: #888;
   font-size: 16px;
   font-weight: bold;
-  float: right;
   padding-left: 5px;
   padding-right: 5px;
   margin-left: 8px;
   border: 1px;
+  align-self: center;
 }
 
 .notification .close-btn:hover {
   background-color: #f0f0f0; 
-  border: 1px solid #ccc;    
-  border-radius: 4px;        
+  border: 1px solid #ccc;
 }
 
 .notification-count {
