add navbar services route and small adjustments

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -897,6 +897,7 @@ h4 {
   flex-direction: row;
   justify-content: space-between;
   padding: 1.2rem 1.5rem;
+  height: 100%;
   align-items: center;
 }
 
