adjust bidding history page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -695,6 +695,11 @@ input[type=password]:focus {
   padding: 0;
 }
 
+.bids-index {
+  width: 50%;
+  margin: auto;
+}
+
 .bid-item {
   display: flex;
   justify-content: space-between;
