--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1600,3 +1600,8 @@ input[type="range"] {
 .ratings-auction-link:hover {
   text-decoration: underline;
 }
+
+.contacts {
+  background-color: var(--main-color);
+  color: white;
+}
